--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es-AR">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Encriptador de Texto</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="imagenes/icon.png">
     <script type="text/javascript" src="javascript.js"></script>
 </head>
+<body>
 <header>
     <div class="container">
         <div class="logo">
-            <img class="logoimg" src="Vector.png">
+            <img class="logoimg" src="imagenes/Logo.svg" title="Alura Logo">
             <h1 class="tittle">Encriptador de mensajes</h1>
         </div>
         <div class="left">
@@ -19,12 +20,15 @@
             <button type="button" id="btn-desencriptar" onclick="desencriptar()">Desencriptar</button>
         </div>
         <div class="right">
-            <img src="muneco.png" id="imgDer">
+            <img src="imagenes/Muñeco.svg" id="imgDer" title="muñeco">
             <h1 id="texto">Ningun mensaje fue encontrado</h1>
-            <textarea id="texto2" name="name" rows="8" cols="80">Ingrese el texto que desees encriptar o desencriptar.</textarea>           
+            <textarea id="texto2" name="name" rows="8" cols="80" placeholder="Ingrese el texto que desees encriptar o desencriptar"></textarea>           
             <div class="left-button"> <p>Solo minúsculas y sin acentos</p>
             <button id="copiar" type="button" name="button" onclick="copiar()">Copiar</button>
         </div>
+        </div>
+    </div>
+</header>
             <footer>
             <div class="colum1">
                 <h1>Acerca de este proyecto</h1>
@@ -32,9 +36,6 @@
                     Primer challenge del proyecto One - Oracle con Alura Latam. Lógica de programación.
                 </p>
                 </div>
-                </div>
-        </footer>
-        </div>
-        
-    </body>
+            </footer>
+        </body>
 </html>
